test/fixtures/warnings/redefinition.txt
redefinition.j:7:1: error: 'foo' previously defined as a global
@class foo
^
redefinition.j:1:9: note: definition is here
@global foo
        ^
redefinition.j:9:1: error: 'foo' previously defined as a global
@implementation foo
^
redefinition.j:1:9: note: definition is here
@global foo
        ^
redefinition.j:12:1: error: 'foo' previously defined as a global
@protocol foo
^
redefinition.j:1:9: note: definition is here
@global foo
        ^
redefinition.j:15:1: error: 'foo' previously defined as a global
@typedef foo
^
redefinition.j:1:9: note: definition is here
@global foo
        ^
redefinition.j:27:1: error: 'Global' previously defined as a global
@class Global
^
redefinition.j:21:1: note: definition is here
Global = "global";
^
redefinition.j:29:1: error: 'Global' previously defined as a global
@implementation Global
^
redefinition.j:21:1: note: definition is here
Global = "global";
^
redefinition.j:32:1: error: 'Global' previously defined as a global
@protocol Global
^
redefinition.j:21:1: note: definition is here
Global = "global";
^
redefinition.j:35:1: error: 'Global' previously defined as a global
@typedef Global
^
redefinition.j:21:1: note: definition is here
Global = "global";
^
redefinition.j:39:1: error: 'window' previously defined as a predefined global
@global window
^
redefinition.j:40:1: error: 'window' previously defined as a predefined global
@class window
^
redefinition.j:42:1: error: 'window' previously defined as a predefined global
@implementation window
^
redefinition.j:45:1: error: 'window' previously defined as a predefined global
@protocol window
^
redefinition.j:48:1: error: 'window' previously defined as a predefined global
@typedef window
^
redefinition.j:61:1: error: 'SomeClass' previously defined as a class
@global SomeClass
^
redefinition.j:54:1: note: definition is here
@implementation SomeClass
^
redefinition.j:63:1: error: 'SomeClass' previously defined as a class
SomeClass = "foo";
^
redefinition.j:54:1: note: definition is here
@implementation SomeClass
^
redefinition.j:65:1: error: 'SomeClass' previously defined as a class
@protocol SomeClass
^
redefinition.j:54:1: note: definition is here
@implementation SomeClass
^
redefinition.j:68:1: error: 'SomeClass' previously defined as a class
@typedef SomeClass
^
redefinition.j:54:1: note: definition is here
@implementation SomeClass
^
redefinition.j:78:1: error: 'AnotherClass' previously defined as a class
@global AnotherClass
^
redefinition.j:71:1: note: definition is here
@implementation AnotherClass
^
redefinition.j:80:1: error: 'AnotherClass' previously defined as a class
AnotherClass = "foo";
^
redefinition.j:71:1: note: definition is here
@implementation AnotherClass
^
redefinition.j:82:1: error: 'AnotherClass' previously defined as a class
@protocol AnotherClass
^
redefinition.j:71:1: note: definition is here
@implementation AnotherClass
^
redefinition.j:85:1: error: 'AnotherClass' previously defined as a class
@typedef AnotherClass
^
redefinition.j:71:1: note: definition is here
@implementation AnotherClass
^
redefinition.j:92:1: error: 'Protocol' previously defined as a protocol
@global Protocol
^
redefinition.j:88:1: note: definition is here
@protocol Protocol
^
redefinition.j:94:1: error: 'Protocol' previously defined as a protocol
@class Protocol
^
redefinition.j:88:1: note: definition is here
@protocol Protocol
^
redefinition.j:96:1: error: 'Protocol' previously defined as a protocol
@implementation Protocol
^
redefinition.j:88:1: note: definition is here
@protocol Protocol
^
redefinition.j:99:1: error: 'Protocol' previously defined as a protocol
@typedef Protocol
^
redefinition.j:88:1: note: definition is here
@protocol Protocol
^
redefinition.j:101:1: error: 'Protocol' previously defined as a protocol
Protocol = "protocol";
^
redefinition.j:88:1: note: definition is here
@protocol Protocol
^

26 errors generated.
